name:                OpenSCAD
version:             0.4.0
synopsis:            ADT wrapper and renderer for OpenSCAD models.
description:         An algebraic data type for describing OpenSCAD models,
                     functions to make building such models easier, and
                     functions for rendering an ADT into an OpenSCAD program.
                     (Fork for modern GHC)
homepage:            https://github.com/ejconlon/haskell-openscad
license:             BSD3
license-file:        LICENSE
author:              Mike Meyer
                     Eric Conlon
maintainer:          ejconlon@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs: src
  exposed-modules: Graphics.OpenSCAD, Graphics.OpenSCAD.Unicode
  other-extensions: UnicodeSyntax
  build-depends: base > 4.5 && < 5.0,
                 colour >=2.3 && < 2.4,
                 filepath >=1.3 && < 1.5,
                 semigroups >= 0.15 && < 1.0,
                 containers >= 0.5
  default-language: Haskell2010

Test-Suite Units
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends: base > 4.5 && < 5.0,
                 colour >=2.3,
                 filepath >=1.3,
                 HUnit >=1.2,
                 Cabal >= 1.18,
                 tasty-hunit >= 0.9,
                 tasty >=0.8,
                 deepseq >= 1.3,
                 semigroups >= 0.15 && < 1.0,
                 containers >= 0.5,
                 OpenSCAD
  default-language: Haskell2010

source-repository head
  type: git
  location: https://github.com/ejconlon/haskell-openscad

